fixing front page more button transitions; search field alignment in subnav

--- a/sass/partials/_front.scss
+++ b/sass/partials/_front.scss
@@ -12,7 +12,7 @@ Theme Name: uri2016
 }
 .front a:link, .front a:visited {
 	color: $link-color;
-	@include fade(color);
+	@include fade(all);
 }
 .front a:hover {
 	color: $dark-tint;
